welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: value && is not a member of (Boolean, Int, Int, Int, Int)
	if ((day==1,2,3,4,5)&& vacation == true ){return "10:00"}
                            ^alarmClock:5: error: value && is not a member of (Boolean, Int, Int, Int, Int)
	if ((day==1,2,3,4,5)&& vacation == false ){return "7:00"}
                            ^alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
	if ((day==1,2,3,4,5)&& vacation == false ){return "7:00"}
        ^