welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ((day==0 || day==6)&& vacation == true ){return "off"}
	if ((day==0 || day==6)&& vacation == false ){return "10:00"}
	if ((day==1,2,3,4,5)&& vacation == true ){return "10:00"}
	if ((day==1,2,3,4,5)&& vacation == false ){return "7:00"}
}
